--- a/src/templates/default.yaml
+++ b/src/templates/default.yaml
@@ -8,8 +8,8 @@ split:
     threshold: 30
     substrate: [255, 255, 255]
     angles: [15, 75, 0, 45]
-halftone:
-    type: AMHalftone
+screen:
+    type: AMScreen
     lpi: 55
     dpi: 1200
     ppi: 300
